<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamLabel" />

            <Spinner
                android:id="@+id/teamSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/teams_array" />

            <TextView
                android:id="@+id/backlayLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backlayLabel" />

            <Spinner
                android:id="@+id/backlaySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/back_lay" />

            <TextView
                android:id="@+id/oddsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oddsLabel" />

            <EditText
                android:id="@+id/oddsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/stakeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stakeLabel" />

            <EditText
                android:id="@+id/stakeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>